--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,7 +13,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "react": ["./node_modules/@types/react"]
     },
     "resolveJsonModule": true,
     "allowJs": true,
@@ -22,7 +23,7 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "plugins": [
       {
         "name": "next"
