--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@better-auth/expo": "^1.3.7",
+    "@cloudflare/workers-types": "^4.20250831.0",
     "@hono/trpc-server": "^0.4.0",
     "@neondatabase/serverless": "^1.0.1",
     "@repo/db": "workspace:*",
@@ -30,23 +31,23 @@
     "@trpc/server": "^11.5.0",
     "better-auth": "^1.3.7",
     "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.2",
-    "hono": "^4.8.2",
+    "drizzle-orm": "^0.44.5",
+    "hono": "^4.9.5",
     "ws": "^8.18.3",
-    "zod": "^4.0.2"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.13.11",
+    "@types/node": "^22.18.0",
     "@types/ws": "^8.18.1",
-    "drizzle-kit": "^0.31.2",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "eslint-js": "eslint/js",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-format": "^1.0.1",
-    "tsdown": "^0.14.1",
-    "typescript": "^5.8.2",
-    "wrangler": "^4.23.0"
+    "tsdown": "^0.14.2",
+    "typescript": "^5.9.2",
+    "wrangler": "^4.33.1"
   }
 }
